refactor(proxy): divide suspend request into independent thread pool
Signed-off-by: SSpirits <admin@lv5.moe>